modules/dynamic-subnet-dual-stack/nat-gateway.tf
# # NAT Gateway
# resource "azurerm_nat_gateway" "this" {
#   name                = "nat-gateway"
#   location            = var.location
#   resource_group_name = var.resource_group_name
#   sku_name            = "Standard"

#   tags = var.tags
# }

# # Public IP for NAT Gateway
# resource "azurerm_public_ip" "nat_ip" {
#   name                = "nat-gateway-ip"
#   location            = var.location
#   resource_group_name = var.resource_group_name
#   allocation_method   = "Static"
#   sku                 = "Standard"

#   tags = var.tags
# }


# # Attach public IP to NAT Gateway
# resource "azurerm_nat_gateway_public_ip_association" "nat_ip_assoc" {
#   nat_gateway_id       = azurerm_nat_gateway.this.id
#   public_ip_address_id = azurerm_public_ip.nat_ip.id
# }

# # Associate NAT Gateway with private subnets
# resource "azurerm_subnet_nat_gateway_association" "private" {
#   for_each = {
#     for s in local.private_subnets : s.name => s
#   }

#   subnet_id      = azurerm_subnet.this[each.key].id
#   nat_gateway_id = azurerm_nat_gateway.this.id
# }
